--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,25 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  background-color: hsl(0 0% 7%);
+  color: hsl(0 0% 82%);
+  font-family: var(--font-roboto);
+  font-size: 16px;
+  font-weight: 400;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+  min-height: calc(100vh - 160px);
 }
 
-* {
+ul,
+li {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
