--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,29 @@
+:root {
+  --font-sm: 14px;
+  --font-md: 16px;
+  --font-lg: 18px;
+  --font-xl: 24px;
+
+  --primary-color: 0 0% 82%;
+  --secondary--color: 0 0% 60%;
+  --bg-color: 0 0% 7%;
+  --card-hover-color: 19 31% 16%;
+  --border-color: 0 0% 30%;
+
+  --header-height: 60px;
+}
+
 body {
   min-height: 100vh;
-  background-color: hsl(0 0% 7%);
-  color: hsl(0 0% 82%);
+  background-color: hsl(var(--bg-color));
+  color: hsl(var(--primary-color));
   font-family: var(--font-roboto);
-  font-size: 16px;
+  font-size: var(--font-md);
   font-weight: 400;
 }
 
 main {
-  min-height: calc(100vh - 160px);
+  min-height: calc(100vh - var(--header-height) * 2 - 40px);
 }
 
 ul,
